--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
 buildscript {
-    ext {
-        kotlin_version = '2.0.0-Beta2'
-    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
     repositories {
         mavenCentral()
@@ -14,5 +11,4 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
-    id 'com.google.dagger.hilt.android' version '2.45' apply false
 }
