--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     // Dependency Injection
     implementation 'com.google.dagger:hilt-android:2.45'
     kapt 'com.google.dagger:hilt-compiler:2.45'
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     // Firebase
     implementation 'com.google.firebase:firebase-auth:21.1.0'
